welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:4: error: not found: value leveBosse
leveBosse()
^PictureMono:10: error: not found: value leveBosse
leveBosse()
^