welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
baisseBrosse()
leveBosse()
gauche()
avance()
droite()
avance()
baisseBrosse()
leveBosse()
gauche()
avance()
gauche()
avance()
}
